--- a/main.css
+++ b/main.css
@@ -2,8 +2,103 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: 1px solid red; */
 }
 
-h1{
-    color: red;
+:root {
+    --background-color: #c5c3c6;
+    --font-color: #46494b;
+    --header-background-color: #4c5c68;
+    --header-font-color: #b0e4db;
+    --field-background-color: #ededee;
+    --field-background-color-hover: #d8e4e9;
+    --border-color: #555;
+    --blue-border-color: #2a3a46;
+    --button-background-color: #4c5c68;
+    --button-hover-background: #3b4b57;
+    --button-active-background: #2a3a46;
+    --font: 'Varela Round', sans-serif;
+  }
+
+.header{
+    background-color: var(--header-background-color);
+    padding: 1.3rem;
+    color: var(--header-font-color);
+    border-bottom: 3px solid var(--blue-border-color);
+    font-family: var(--font);
+}
+
+body{
+    background-color: var(--background-color);
+    color: var(--font-color);
+    font-family: var(--font);
+    line-height: 1.5;
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+    font-size: 100px;
+    line-height: 1.2;
+}
+
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.gameannouncement{
+    padding: 1.2rem 0;
+    font-size: 30px;
+    text-align: center;
+    color: var(--font-color);
+    font-family: var(--font);
+}
+
+.gameboard{
+    display: grid;
+    grid-template-rows: repeat(3,150px);
+    grid-template-columns: repeat(3,150px);
+    border: 2px solid var(--border-color);
+}
+
+.field{
+    background-color: var(--field-background-color);
+    font-size: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--border-color);
+    cursor: pointer;
+    user-select: none;
+}
+
+.field:hover{
+    background-color: var(--field-background-color-hover);
+}
+
+.restart-button{
+    padding: 10px 20px;
+    border: 3px solid var(--blue-border-color);
+    background-color: var(--button-background-color);
+    border-radius: 7px;
+    color: var(--header-font-color);
+    font-size: 50px;
+    margin-top: 1.8%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    cursor: pointer;
+    outline: none;
+}
+
+.restart-button:hover{
+    background-color: var(--button-hover-background);
+}
+
+.restart-button:active{
+    background-color: var(--button-active-background);
 }
